Implemented Alice Allen's corrections

--- a/dagstuhl-eas-manifesto.tex
+++ b/dagstuhl-eas-manifesto.tex
@@ -196,7 +196,7 @@ Are we certain we can reproduce previous research methods in the future given ar
 What is required in terms of long term funding, education and infra-structure to make the goals of academic software feasible?
 \end{itemize}
 
-The goals of the workshop have been to plan how to widen and deepen the impact of software engineering knowledge in research labs across the globe and to prioritize pressing open questions for the software engineering community with respect to research software.
+The goals of the workshop were to plan how to widen and deepen the impact of software engineering knowledge in research labs across the globe and to prioritize pressing open questions for the software engineering community with respect to research software.
 
 \subsection{Pledges}
 
@@ -232,7 +232,7 @@ and
 \clearpage
 \subsection{Pledge discussion}
 
-Here we discuss, for each pledge, the \emph{background} motivating the pledge, possible \emph{contradictions or concerns} pose challenges for the pledge, \emph{what actions are needed}, \emph{what impact} these actions are expected to bring, and \emph{who else needs to take action}.
+Here we discuss, for each pledge, the \emph{background} motivating the pledge, possible \emph{contradictions or concerns} that pose challenges for the pledge, \emph{what actions are needed}, \emph{what impact} these actions are expected to bring, and \emph{who else needs to take action}.
 
 
 
@@ -252,7 +252,7 @@ Research might use a lot of software, so reference sections could potentially be
 Software evolves over time, so there might be many different citations that dilute its apparent impact.
 Software can have dynamic authorship, complicating the question of who deserves credit for a particular version.
 
-The software that needs to be cited may not be published, making it hard to determine how to cite it.  There may be limits on the numbers of citations permitted by a journal.  There may be a page limit for the text version of the work.  There may not be a clearly defined way to add citations for non-text products, such as software, either in the software itself or in the published metadata (\eg in Zenodo\footnote{\url{http://zenodo.org}} or figshare\footnote{\url{https://figshare.com}}).
+The software that needs to be cited may not be published, making it hard to determine how to cite it.  There may be limits on the number of citations permitted by a journal.  There may be a page limit for the text version of the work.  There may not be a clearly defined way to add citations for non-text products, such as software, either in the software itself or in the published metadata (\eg in Zenodo\footnote{\url{http://zenodo.org}} or figshare\footnote{\url{https://figshare.com}}).
 There may be resistance from individual authors, even in the open science community, who believe that noting a URL is enough.%
 \footnote{For example, see these discussions:\\
 \url{https://github.com/scipy-conference/scipy_proceedings/pull/123\#issuecomment-117323363} and\\
@@ -260,7 +260,7 @@ There may be resistance from individual authors, even in the open science commun
 }
 
 Academics whose careers are impacted by their relationships with editors at prestigious journals may worry about annoying those editors. While this is a battle worth fighting for, junior researchers may be anxious about making this stand against more powerful individuals who might misinterpret it.
-This also increases the effort needed to review papers.  Various models for this have been suggested to reduce this, such as not having all reviewers required to test the software, to having special software reviewers who are assigned to reviewing software but not the full paper.
+This also increases the effort needed to review papers.  Various models for this have been suggested to reduce this, from not having all reviewers required to test the software, to having special software reviewers who are assigned to reviewing software but not the full paper.
 
 %Journals may have citation limits or page limits, so that adding software citations have the cost of removing other citations or removing research. \bc{already said earlier in the same part}
 
@@ -279,14 +279,14 @@ Authors need guidance about when to cite software (\ie which software should be 
 \emph{Why would those small actions have impact?}
 If software citations add to a scholar's h-index, it can be beneficial for the authors. Readers of a paper seeking to build on the published work will have more concrete information about how the work was done.
 Effort by the reviewers should \emph{trickle up} to journal editors and \emph{trickle down} to research authors.
-By requiring authors to provide these links, we will work towards educating the community to produce reusable software.
+By requiring authors to provide these citations, we will work towards educating the community to produce reusable software.
 % Or at least, a set of tests that work for the reviewers of the publication.
 
 \emph{Who else needs to act?} Publishers need to agree to citations being included in publications. Software authors need to provide information about how their software should be cited. Citation tracking systems need to include software citations.
 Editors and authors too will need to begin to hold their colleagues to this standard in order for this to become a community norm.
 Conference chairs/journal editors may add this requirement explicitly when publishing a call for papers. Publishers and repository administrators
 % \katznote{I don't know what the name is for people who create and run repositories} \on{repository administrators?}
-need to create mechanisms for all products to includes citations as part of their metadata.
+need to create mechanisms for all products to include citations as part of their metadata.
 
 %\todo{What are examples of what and what not to cite? Also, there might be differences in granularity that should be considered...}
 %\katznote{see \S5.1 of \url{https://peerj.com/preprints/2169/} for some discussion on this}
@@ -303,13 +303,13 @@ need to create mechanisms for all products to includes citations as part of thei
 % \on{was: I will include my software activities in my CV and in activity reports, and ask where they should go if they are not present. I will discuss and highlight these contributions when reviewing CVs \etc}
 
 \emph{Background.}
-Funding agencies such as the US NSF are beginning to recognize research products such as software just as they do for publications. This acknowledges the contributions of software as a primary research product. Including these in CVs and reports as well as requiring them from others is an important step towards normalizing them as having similar stature to publications.
+Funding agencies such as the US National Science Foundation are beginning to recognize research products such as software just as they do for publications. This acknowledges the contributions of software as a primary research product. Including these in CVs and reports as well as requiring them from others is an important step towards normalizing them as having similar stature to publications.
 
 The guidelines used for promotion and evaluation are important because they specify what is valued and thus shape the activities that people undertake. Ultimately promotion also determines who continues to be employed and thus whether people can continue to make software contributions at all. Since promotion guidelines are written by the powerful within institutions, many people feel they can have little or no impact on them; even the powerful feel that they cannot deviate from how these are defined in similar institutions, leading to a stalemate that prevents change.
 Nevertheless, we are all evaluated and we evaluate others, and we can influence these processes when we participate in these evaluations.
 Furthermore, we can provide templates and guidelines for recognizing software contributions and encourage respected organizations to adopt them.
 % a \meh{template language} \on{obscure. is it a template? a language? a template for language? a language for templates?} \katznote{I think this is `a template' (written in a language)} and seek to have respected organizations recommend \meh{them}. \on{what does "them" refer to?}
-For example, in 1994 the National Academies released a report titled, ``Academic Careers for Experimental Computer Scientists and Engineers''\footnote{\url{http://www.nap.edu/read/2236/chapter/1}}. The report was intended to provide a reference point for change, and has been quoted in many tenure recommendation letters.
+For example, in 1994 the US National Academy of Sciences released a report titled, ``Academic Careers for Experimental Computer Scientists and Engineers''\footnote{\url{http://www.nap.edu/read/2236/chapter/1}}. The report was intended to provide a reference point for change, and has been quoted in many tenure recommendation letters.
 
 
 \emph{Contradictions or concerns.}
@@ -401,7 +401,7 @@ By necessity, software is often developed with a somewhat abstracted sense of th
 \emph{Contradictions or concerns.}
 Evaluating whether a solution is appropriate is time-intensive, and end users may not be equipped to do so. Additional expertise is needed, but the person offering that expertise bears the burden of communicating effectively to the end users. This takes time, energy, and its own skill set.
 
-It is hard enough to get funding to support primary software development. Researchers under any sort of financial pressure may have difficulty prioritizing such support over new development and innovation.
+It is hard enough to get funding to support primary software development. Researchers under any sort of financial pressure may have difficulty prioritizing support for adapting existing software over new development and innovation.
 
 \emph{What actions are needed?}
 If I am in the position of assessing the context or suggesting a solution, I will not only focus on the things I am most excited about (the shiny new tool) but make an effort to hear what the researchers/users are excited about, and ways the best parts of existing process and enthusiasm can be channelled into sustained productivity.
@@ -483,15 +483,15 @@ A major challenge of RSE is \emph{discoverability} of relevant available softwar
 a given research problem. This challenge is further complicated by the \emph{diversity} of
 programmer skill, project scale, level of concern and scale of action. The new and ambitious
 \textit{Software Heritage}\footnote{\url{https://www.softwareheritage.org}} initiative could be used
-to make software available and discoverable and provides a structured and rich repository of
-currently more that 3 billions programs.
+to make software available and discoverable, and provides a structured and rich repository of
+currently more than 3 billion programs.
 
 Understanding the metadata ecosystem is another major research focus, but what other approaches, aside from (or complementary to) standards can support scaling of discoverability? Other questions on this agenda are concerned with measuring the amount and cost of hidden software, but we already recognize it as a pain point that may be addressed with design, tooling, and workshops.
 
 % ON. Was: Econometrics of infrastructure and hidden software
 
 Claims of cost of hidden software or infrastructure maintenance remain (often) anecdotal or, at best, qualitative self-report. It is difficult to even measure the amount of hidden code (see Q1) let alone quantify its impact. However, this is needed for evaluation of interventions.
-
+Some starting points for further research follow:
 
 \begin{itemize}
 \item HCI/design research: Understand user intention to support discoverability, explore opportunities for machine learning application
@@ -534,6 +534,8 @@ The following specific questions need to be addressed:
 
 Many common tools that embody SE best practices are not written for researchers. Tools like Jupyter Notebook provide a more natural environment. In much SE research, the assumption is that the programmer is building and maintaining an artefact, but many researchers write code that should work and be correct, but not necessary constitute the same scale or persistence of artefact. There are ongoing SE research projects in this direction. SE is a scholarly community well-positioned to understand and design for these forms of programming.
 
+Here are some possible starting points for further research:
+
 \begin{itemize}
 \item How can tool design bring what SE already knows (\eg about testing, debugging, reproducibility) to bear into the scientific context?
 \item How do different tools augment programmer cognition?
@@ -545,7 +547,7 @@ Many common tools that embody SE best practices are not written for researchers.
     \end{itemize}
 \item Tooling and methodology to enable researchers to think about their models as first class entities
 \item Enabling co-research of the (visual) language needed to describe new theory, and enabling immediate simulation and verification of the new language.
-\item A generalized/moldable Matlab, moldable maple.
+\item How can we arrive at a generalized/moldable Matlab, a moldable maple?
 \end{itemize}
 
 % --------------------------------------------------
@@ -593,11 +595,11 @@ Specific questions in the area of ecosystem analysis and metadata are:
 
 \begin{itemize}
 \item What kind of metadata is needed? What formats are appropriate?
-\item Metadata: what motivates projects to generate and maintain metadata?
+\item What motivates projects to generate and maintain metadata?
 \item How well can software be observed in the literature?
 \item What are the moments in which participants are well motivated (\eg people are motivated just after publishing a new paper to add it to their request for citation).
 \item Can we motivate software developers to improve metadata by pushing
-\item Metrics of software: how can quantify and measure code meaningfully
+\item How can we quantify and measure code meaningfully?
 \end{itemize}
 
 % ==================================================
