--- a/dagstuhl-eas-manifesto.tex
+++ b/dagstuhl-eas-manifesto.tex
@@ -8,6 +8,8 @@
 \usepackage{microtype}%if unwanted, comment out or use option "draft"
 \input{edit-macros.tex}
 \newcommand{\onhere}{\yellowbox{$\Rightarrow$ OSCAR: CONTINUE HERE $\Leftarrow$}}
+\usepackage{needspace}
+\newcommand{\needlines}[1]{\Needspace{#1\baselineskip}}
 % ============================================================
 \renewcommand{\paragraph}[1]{\subsubsection*{#1}\xspace}
 \newcommand{\manifesto}[1]{{\bf #1}\xspace}
@@ -136,7 +138,10 @@ and
 % ----------
 \paragraph{Citation}
 \begin{itemize}
-\item I will make explicit how to cite my software, I will cite the software I used to produce my research results, and when reviewing, I will require others to cite the software they have used.
+% \item I will make explicit how to cite my software, I will cite the software I used to produce my research results, and when reviewing, I will require others to cite the software they have used.
+\item I will make explicit how to cite my software.
+\item I will cite the software I used to produce my research results.
+\item When reviewing, I will require others to cite the software they have used.
 \end{itemize}
 
 % ----------
@@ -148,11 +153,15 @@ and
 % ----------
 \paragraph{Development and use}
 \begin{itemize}
-\item I will develop software as open source from the start, whenever possible, and I will contribute to sustaining software I use and rely on.
-\item I will match proposed software engineering practices to the actual needs and resources of the project, and I will help researchers improve the quality of their software without passing judgment.
-\item I will publish the intellectual contributions of my research software, and I will document (including usage instructions, and input and output examples), package, release and archive versions of my software.
-%\kt{Does this belong in the 'citation' bracket ? both are about dissemination-related work} \katznote{the first part of it is more close to citation, but the second part is not.  I think it better fits here.  Another option would be changing this heading to ``Development and Dissemination'', though I'm not really sure that's a better option.}\bc{I see here at least two separate pledges: 1) software lifecycle management: including proper and documented releases, packaging, etc., and 2) the intellectual property to give the appropriate credits (this belongs more on the citation part?)}
-%\on{I would not separate these. I agree there are two things going on here, but I like seeing them together.} \katznote{I'm ok with leaving them here, together.}
+% \item I will develop software as open source from the start, whenever possible, and I will contribute to sustaining software I use and rely on.
+\item I will develop software as open source from the start, whenever possible.
+\item I will contribute to sustaining software I use and rely on.
+% \item I will match proposed software engineering practices to the actual needs and resources of the project, and I will help researchers improve the quality of their software without passing judgment.
+\item I will match proposed software engineering practices to the actual needs and resources of the project.
+\item I will help researchers improve the quality of their software without passing judgment.
+%\item I will publish the intellectual contributions of my research software, and I will document (including usage instructions, and input and output examples), package, release and archive versions of my software.
+\item I will publish the intellectual contributions of my research software.
+\item I will document (including usage instructions, and input and output examples), package, release and archive versions of my software.
 \end{itemize}
 
 % ==================================================
@@ -211,8 +220,10 @@ and
 % ----------
 \paragraph{Citation}
 \begin{itemize}
-\item I will make explicit how to cite my software, I will cite the software I used to produce my research results, and when reviewing, I will require others to cite the software they have used.
-%\katznote{maybe ``\dots and when reviewing, I will require others to cite the software they have used.''}
+% \item I will make explicit how to cite my software, I will cite the software I used to produce my research results, and when reviewing, I will require others to cite the software they have used.
+\item I will make explicit how to cite my software.
+\item I will cite the software I used to produce my research results.
+\item When reviewing, I will require others to cite the software they have used.
 \end{itemize}
 
 % ----------
@@ -224,10 +235,17 @@ and
 % ----------
 \paragraph{Development and use}
 \begin{itemize}
-\item I will develop software as open source from the start, whenever possible, and I will contribute to sustaining software I use and rely on.
-\item I will match proposed software engineering practices to the actual needs and resources of the project, and I will help researchers improve the quality of their software without passing judgment.
-\item I will publish the intellectual contributions of my research software, and I will document (including usage instructions, and input and output examples), package, release and archive versions of my software.
+% \item I will develop software as open source from the start, whenever possible, and I will contribute to sustaining software I use and rely on.
+\item I will develop software as open source from the start, whenever possible.
+\item I will contribute to sustaining software I use and rely on.
+% \item I will match proposed software engineering practices to the actual needs and resources of the project, and I will help researchers improve the quality of their software without passing judgment.
+\item I will match proposed software engineering practices to the actual needs and resources of the project.
+\item I will help researchers improve the quality of their software without passing judgment.
+%\item I will publish the intellectual contributions of my research software, and I will document (including usage instructions, and input and output examples), package, release and archive versions of my software.
+\item I will publish the intellectual contributions of my research software.
+\item I will document (including usage instructions, and input and output examples), package, release and archive versions of my software.
 \end{itemize}
+
 
 \clearpage
 \subsection{Pledge discussion}
@@ -238,10 +256,13 @@ Here we discuss, for each pledge, the \emph{background} motivating the pledge, p
 
 %:=== DISCUSSION OF PLEDGES ===
 % --------------------------------------------------
-\subsubsection*{Citation pledge}
+\subsubsection*{Citation pledges}
 
 % ----------
-\paragraph{I will make explicit how to cite my software, I will cite the software I used to produce my research results, and when reviewing, I will require others to cite the software they have used.}
+% \paragraph{I will make explicit how to cite my software, I will cite the software I used to produce my research results, and when reviewing, I will require others to cite the software they have used.}
+\paragraph{I will make explicit how to cite my software.\\
+I will cite the software I used to produce my research results.\\
+When reviewing, I will require others to cite the software they have used.}
 
 \emph{Background.} When a scholarly work relies on specific software, it should cite that software, to give credit to the creators of that software, to support reproducibility, and to provide a more complete understanding of the scholarly work.
 This is important in order to raise the bar for transparency in academic work, and to recognize software as a research object worthy of exposure to peer review. This requirement by reviewers will help to strengthen the call for increased openness, transparency, and verifiability of software used in research. As researchers are motivated by pressure to publish, reviewers are uniquely able to apply pressure where rigor is needed. Previous work on this topic includes the Open Science Peer Review Oath~\cite{aleksic_open_2015}.
@@ -335,7 +356,9 @@ These actions should help to drive change in the university at higher levels and
 \subsubsection*{Development and use pledges}
 
 % ----------
-\paragraph{I will develop software as open source from the start, whenever possible, and I will contribute to sustaining software I use and rely on.}
+% \paragraph{I will develop software as open source from the start, whenever possible, and I will contribute to sustaining software I use and rely on.}
+\paragraph{I will develop software as open source from the start, whenever possible. \\
+I will contribute to sustaining software I use and rely on.}
 
 \emph{Background.}
 Some projects are intended to be long-lived and widely usable; others are intended only to create outputs for a single research project or even paper. Potential users should be aware of the author's intentions for a project before deciding to rely on it.
@@ -391,8 +414,11 @@ Whenever a paper is published within your institution that explicitly mentions t
 \emph{Who else needs to act?}
 Reviewers of papers need to insist that code behind papers is released. Funders need to make software release part of the requirement for funding.
 
+\needlines{4}
 % ----------
-\paragraph{I will match proposed software engineering practices to the actual needs and resources of the project, and I will help researchers improve the quality of their software without passing judgment.}
+% \paragraph{I will match proposed software engineering practices to the actual needs and resources of the project, and I will help researchers improve the quality of their software without passing judgment.}
+\paragraph{I will match proposed software engineering practices to the actual needs and resources of the project. \\
+I will help researchers improve the quality of their software without passing judgment.}
 
 
 \emph{Background.}
@@ -416,7 +442,8 @@ When a software solution is proffered to a research community, there should be a
 Time constraints (\eg introduced by sprints, workshops, hackathons) can help mitigate the uncertainty associated with adoption and create momentum for an in-depth evaluation of the appropriateness of a demanding technological solution.
 
 % ----------
-\paragraph{I will publish the intellectual contributions of my research software, and I will document (including usage instructions, and input and output examples), package, release and archive versions of my software.}
+% \paragraph{I will publish the intellectual contributions of my research software, and I will document (including usage instructions, and input and output examples), package, release and archive versions of my software.}
+\paragraph{I will publish the intellectual contributions of my research software. \\ I will document (including usage instructions, and input and output examples), package, release and archive versions of my software.}
 
 \emph{Background.}
 No software project is an island. We all rely on other software to build our software. If we use free software, such as tools, libraries and compilers, then it is fair and reasonable that we try and support these projects if we can. This might include citing them, providing letters of support, reporting issues, fixing bugs, contributing new features or offering monetary contributions.
