encourage rather than require

--- a/dagstuhl-eas-manifesto.tex
+++ b/dagstuhl-eas-manifesto.tex
@@ -141,7 +141,7 @@ and
 % \item I will make explicit how to cite my software, I will cite the software I used to produce my research results, and when reviewing, I will require others to cite the software they have used.
 \item I will make explicit how to cite my software.
 \item I will cite the software I used to produce my research results.
-\item When reviewing, I will require others to cite the software they have used.
+\item When reviewing, I will encourage others to cite the software they have used.
 \end{itemize}
 
 % ----------
@@ -223,7 +223,7 @@ and
 % \item I will make explicit how to cite my software, I will cite the software I used to produce my research results, and when reviewing, I will require others to cite the software they have used.
 \item I will make explicit how to cite my software.
 \item I will cite the software I used to produce my research results.
-\item When reviewing, I will require others to cite the software they have used.
+\item When reviewing, I will encourage others to cite the software they have used.
 \end{itemize}
 
 % ----------
@@ -262,7 +262,7 @@ Here we discuss, for each pledge, the \emph{background} motivating the pledge, p
 % \paragraph{I will make explicit how to cite my software, I will cite the software I used to produce my research results, and when reviewing, I will require others to cite the software they have used.}
 \paragraph{I will make explicit how to cite my software.\\
 I will cite the software I used to produce my research results.\\
-When reviewing, I will require others to cite the software they have used.}
+When reviewing, I will encourage others to cite the software they have used.}
 
 \emph{Background.} When a scholarly work relies on specific software, it should cite that software, to give credit to the creators of that software, to support reproducibility, and to provide a more complete understanding of the scholarly work.
 This is important in order to raise the bar for transparency in academic work, and to recognize software as a research object worthy of exposure to peer review. This requirement by reviewers will help to strengthen the call for increased openness, transparency, and verifiability of software used in research. As researchers are motivated by pressure to publish, reviewers are uniquely able to apply pressure where rigor is needed. Previous work on this topic includes the Open Science Peer Review Oath~\cite{aleksic_open_2015}.
