--- a/dagstuhl-eas-manifesto.tex
+++ b/dagstuhl-eas-manifesto.tex
@@ -31,7 +31,7 @@
 \title{Manifesto on Engineering Academic Software}
 % \titlerunning{A Manifesto Sample}%optional
 
-
+% NB: 25 authors
 \author[1]{Alice Allen}\affil[1]{University of Maryland -- College Park, US}
 \author[2]{Cecilia Aragon}\affil[2]{University of Washington -- Seattle, US}
 \author[3]{Christoph Becker}\affil[3]{University of Toronto, Canada}
@@ -138,7 +138,6 @@ and
 % ----------
 \paragraph{Citation}
 \begin{itemize}
-% \item I will make explicit how to cite my software, I will cite the software I used to produce my research results, and when reviewing, I will require others to cite the software they have used.
 \item I will make explicit how to cite my software.
 \item I will cite the software I used to produce my research results.
 \item When reviewing, I will encourage others to cite the software they have used.
@@ -153,15 +152,12 @@ and
 % ----------
 \paragraph{Development and use}
 \begin{itemize}
-% \item I will develop software as open source from the start, whenever possible, and I will contribute to sustaining software I use and rely on.
 \item I will develop software as open source from the start, whenever possible.
 \item I will contribute to sustaining software I use and rely on.
-% \item I will match proposed software engineering practices to the actual needs and resources of the project, and I will help researchers improve the quality of their software without passing judgment.
 \item I will match proposed software engineering practices to the actual needs and resources of the project.
 \item I will help researchers improve the quality of their software without passing judgment.
-%\item I will publish the intellectual contributions of my research software, and I will document (including usage instructions, and input and output examples), package, release and archive versions of my software.
 \item I will publish the intellectual contributions of my research software.
-\item I will document (including usage instructions, and input and output examples), package, release and archive versions of my software.
+\item I will document (including usage instructions, and input and output examples), package, release, and archive versions of my software.
 \end{itemize}
 
 % ==================================================
@@ -175,7 +171,7 @@ and
 \emph{Academia is software driven.} As software is becoming a pervasive technology for automating and innovating every aspect of the human condition, it is also embedded firmly in the academic world. On the one hand, in computer science and in particular software engineering research, we see experimental software and toolkits emerge continuously, either as part of the \emph{output} of research effort, or as part of the \emph{research method}. On the other hand, in general it may be that software is used even more actively in other fields of research such as mathematics, biology, particle physics, astronomy, medicine, and law. Here too, we can distinguish software that is part of the output (\ie development of innovative production techniques) from software that contributes to the research methods.
 
 There is an explosion of available open-data online which is accessed and analysed through the creation of new software --- generating more data to analyse. We focus on the \emph{sustainability} of this software, \ie any software that acquires, cleanses, stores, annotates, transforms, filters, generates (\etc) research data.
-By ``sustainability'' we mean the \emph{capacity to endure}. We define software as sustainable if it will continue to be available in the future, on new platforms, and meeting new needs.
+By ``sustainability'' we mean the \emph{capacity to endure}. We define software as sustainable if it will continue to be available in the future, on new platforms, and meet new needs.
 %\katznote{Did we come up with this definition?  If not, we should cite where we got it from.  Actually, I see I might have said it - it's from slide 23 of \url{http://www.slideshare.net/danielskatz/scientific-software-challenges-and-community-responses}, though I don't know if made it up or took it from somewhere else and forgot to cite it} \on{Yes, I took it from you. Shall we say, ``We define software to be sustainable ...''?} \katznote{I've done so - please remove this comment if you think this is ok.}
 
 
@@ -211,7 +207,7 @@ The goals of the workshop were to plan how to widen and deepen the impact of sof
 
 A key result of this workshop has been to identify a number of concrete \emph{actions} to be taken by researchers involved in the use, production, and evaluation of academic software. These actions are expressed as a series of personal \emph{pledges} that researchers are encouraged to take and follow.
 
-The pledges are organized into three groups, dealing with:
+The pledges are organized into three groups, dealing respectively with:
 (i) ensuring that research software is properly \emph{cited};
 (ii) promoting the \emph{careers} of research software engineers who develop academic software;
 and
@@ -220,7 +216,6 @@ and
 % ----------
 \paragraph{Citation}
 \begin{itemize}
-% \item I will make explicit how to cite my software, I will cite the software I used to produce my research results, and when reviewing, I will require others to cite the software they have used.
 \item I will make explicit how to cite my software.
 \item I will cite the software I used to produce my research results.
 \item When reviewing, I will encourage others to cite the software they have used.
@@ -235,23 +230,19 @@ and
 % ----------
 \paragraph{Development and use}
 \begin{itemize}
-% \item I will develop software as open source from the start, whenever possible, and I will contribute to sustaining software I use and rely on.
 \item I will develop software as open source from the start, whenever possible.
 \item I will contribute to sustaining software I use and rely on.
-% \item I will match proposed software engineering practices to the actual needs and resources of the project, and I will help researchers improve the quality of their software without passing judgment.
 \item I will match proposed software engineering practices to the actual needs and resources of the project.
 \item I will help researchers improve the quality of their software without passing judgment.
-%\item I will publish the intellectual contributions of my research software, and I will document (including usage instructions, and input and output examples), package, release and archive versions of my software.
 \item I will publish the intellectual contributions of my research software.
-\item I will document (including usage instructions, and input and output examples), package, release and archive versions of my software.
+\item I will document (including usage instructions, and input and output examples), package, release, and archive versions of my software.
 \end{itemize}
 
 
 \clearpage
 \subsection{Pledge discussion}
 
-Here we discuss, for each pledge, the \emph{background} motivating the pledge, possible \emph{contradictions or concerns} that pose challenges for the pledge, \emph{what actions are needed}, \emph{what impact} these actions are expected to bring, and \emph{who else needs to take action}.
-
+Here we discuss the \emph{background} motivating each pledge or group of pledges, possible \emph{contradictions or concerns} that pose challenges for pledges, \emph{what actions are needed}, \emph{what impact} these actions are expected to bring, and \emph{who else needs to take action}.
 
 
 %:=== DISCUSSION OF PLEDGES ===
@@ -265,7 +256,7 @@ I will cite the software I used to produce my research results.\\
 When reviewing, I will encourage others to cite the software they have used.}
 
 \emph{Background.} When a scholarly work relies on specific software, it should cite that software, to give credit to the creators of that software, to support reproducibility, and to provide a more complete understanding of the scholarly work.
-This is important in order to raise the bar for transparency in academic work, and to recognize software as a research object worthy of exposure to peer review. This requirement by reviewers will help to strengthen the call for increased openness, transparency, and verifiability of software used in research. As researchers are motivated by pressure to publish, reviewers are uniquely able to apply pressure where rigor is needed. Previous work on this topic includes the Open Science Peer Review Oath~\cite{aleksic_open_2015}.
+This is important in order to raise the bar for transparency in academic work, and to recognize software as a research object worthy of exposure to peer review. This requirement by reviewers will help strengthen the call for increased openness, transparency, and verifiability of software used in research. As researchers are motivated by pressure to publish, reviewers are uniquely able to apply pressure where rigor is needed. Previous work on this topic includes the Open Science Peer Review Oath~\cite{aleksic_open_2015}.
 % http://f1000research.com/articles/3-271/v2
 
 \emph{Contradictions or concerns.}
@@ -356,7 +347,6 @@ These actions should help to drive change in the university at higher levels and
 \subsubsection*{Development and use pledges}
 
 % ----------
-% \paragraph{I will develop software as open source from the start, whenever possible, and I will contribute to sustaining software I use and rely on.}
 \paragraph{I will develop software as open source from the start, whenever possible. \\
 I will contribute to sustaining software I use and rely on.}
 
@@ -373,7 +363,7 @@ Dismissive, uncharitable comments about existing code can lead to online shaming
 % There is an issue of shame in the research software community which often prevents researchers from releasing the code that facilitated their research.
 This in turn leads to a body of computational research that is extremely difficult to reproduce. It is also wasteful of resources since it costs a great deal of money to develop that software. It takes longer to build on such research since the foundations need to be reimplemented.
 
-A very large movement behind this openness is already well underway and has resulted in more than one manifesto~\cite{barba_reproducibility_2012,alex_holcombe_open_2011}.
+A very large movement behind this openness is already well underway and has resulted in more than one manifesto~\cite{alex_holcombe_open_2011,barba_reproducibility_2012}.
 % \footnote{\url{http://lorenabarba.com/gallery/reproducibility-pi-manifesto/}, \url{http://www.openaccesspledge.com/}}
 
 \emph{Contradictions or concerns.}
@@ -383,7 +373,7 @@ Some institutions prohibit release of software under a FOSS license without IP r
 %\meh{When a project is initiated, this basis allows such reviews to be addressed in the absence of a concrete product.} \on{obscure}
 %Software can evolve from one state to the other as its utility is recognized by others, so these decisions may need to be revisited.
 
-There is literature on success in open source arguing that projects should start with a (nearly) working software application, not just ideas and plans~\cite{senyard2004have}. One possible solution here is to use infrastructure that can be easily opened, such as private repositories on github, but carefully choose when to flip that switch. That does not, however, change practices such as governance.
+There is literature on success in open source arguing that projects should start with a (nearly) working software application, not just ideas and plans~\cite{senyard2004have}. One possible solution here is to use infrastructure that can be easily opened, such as private repositories on github, but carefully choose when to flip that switch. That does not, however, change the need for practices such as governance.
 
 %There have been cases where researchers have released their code and have been publicly shamed by the software engineering community because it was of low quality.
 %\todo{(NEED CITATIONS- SOMETHING WAS ON SLASHDOT A COUPLE OF YEARS AGO)}
@@ -416,7 +406,6 @@ Reviewers of papers need to insist that code behind papers is released. Funders 
 
 \needlines{4}
 % ----------
-% \paragraph{I will match proposed software engineering practices to the actual needs and resources of the project, and I will help researchers improve the quality of their software without passing judgment.}
 \paragraph{I will match proposed software engineering practices to the actual needs and resources of the project. \\
 I will help researchers improve the quality of their software without passing judgment.}
 
@@ -442,8 +431,7 @@ When a software solution is proffered to a research community, there should be a
 Time constraints (\eg introduced by sprints, workshops, hackathons) can help mitigate the uncertainty associated with adoption and create momentum for an in-depth evaluation of the appropriateness of a demanding technological solution.
 
 % ----------
-% \paragraph{I will publish the intellectual contributions of my research software, and I will document (including usage instructions, and input and output examples), package, release and archive versions of my software.}
-\paragraph{I will publish the intellectual contributions of my research software. \\ I will document (including usage instructions, and input and output examples), package, release and archive versions of my software.}
+\paragraph{I will publish the intellectual contributions of my research software. \\ I will document (including usage instructions, and input and output examples), package, release, and archive versions of my software.}
 
 \emph{Background.}
 No software project is an island. We all rely on other software to build our software. If we use free software, such as tools, libraries and compilers, then it is fair and reasonable that we try and support these projects if we can. This might include citing them, providing letters of support, reporting issues, fixing bugs, contributing new features or offering monetary contributions.
@@ -539,7 +527,7 @@ To extend the persistence of software execution across environments and tools op
 The following specific questions need to be addressed:
 
 \begin{itemize}
-\item What we would like to have as a research environment for reproducibility, including  software and data, 10 years from now?
+\item What would we like to have as a research environment for reproducibility, including  software and data, 10 years from now?
 \item How to design and implement a virtual machine for forever-sustainable executable environments?
 \item How to deal with software legacy in the long term, in particular:
     \begin{itemize}
