small fixes from Robert Hirschfeld

--- a/dagstuhl-eas-manifesto.tex
+++ b/dagstuhl-eas-manifesto.tex
@@ -192,9 +192,9 @@ As software is becoming integral to our processes, the tools we use, and the out
 %\ins{``Sustainability'' refers not only to the qualities of a piece of software that contribute to its maintainability, but also commitment to processes and resources that will ensure that software's life beyond the scope of a single research project.}
 %\on{ok?}
 %\katznote{I like sustainability defined as the capacity to endure. For software, sustainability means the software will continue to be available in the future, on new platforms, meeting new needs.}
-Are we certain we can reproduce previous research methods in the future given arbitrary changes to the technological contexts (machines, operating systems, programming languages frameworks)? Are we able to incrementally adapt research software to emerging opportunities at the same time, without loss of reproducibility and without incurring prohibitive cost?
+Are we certain we can reproduce previous research methods in the future given arbitrary changes to the technological contexts (machines, operating systems, programming languages, frameworks)? Are we able to incrementally adapt research software to emerging opportunities at the same time, without loss of reproducibility and without incurring prohibitive cost?
 \item \emph{Is the software process we use fit for the quality we expect?} How can we optimize it in a unique academic context without losing quality? What tools and processes exist to help with this balance? What investments are necessary to discover it?
-\item \emph{How can we secure academic software quality?} How can we monitor, steer, report on and review academic software quality? How can we manage and secure trust between academic research teams considering software developed for output and/or research methods?
+\item \emph{How can we secure academic software quality?} How can we monitor, steer, report on, and review academic software quality? How can we manage and secure trust between academic research teams considering software developed for output and/or research methods?
 \item \emph{How should we balance domain knowledge and expertise with software engineering knowledge and expertise in an academic research team?} How can we effectively manage heterogeneous research teams where different domains benefit from each other?
 \item \emph{How can we motivate research teams to invest in academic software}, especially considering the highly competitive and already complex environment they operate in?
 % What are motivators for investment and change for research teams, with respect to the above, considering the highly competitive and already complex environment they operate in?
@@ -510,7 +510,7 @@ Some starting points for further research follow:
 
 \begin{itemize}
 \item HCI/design research: Understand user intention to support discoverability, explore opportunities for machine learning application
-\item Instrumentation of existing infrastructure (github), or use of annotation infrastructure such as hypothes.is, json-ld
+\item Instrumentation of existing infrastructure (\eg github), or use of annotation infrastructure such as hypothes.is, json-ld
 \item What is the cost of code that is undiscoverable, unavailable, or unrunnable?
 \item How much does it cost to support / not support software that others use?
 \item Map out existing models to share the costs, to inform recommendations
