--- a/dagstuhl-eas-manifesto.tex
+++ b/dagstuhl-eas-manifesto.tex
@@ -373,7 +373,7 @@ Some institutions prohibit release of software under a FOSS license without IP r
 %\meh{When a project is initiated, this basis allows such reviews to be addressed in the absence of a concrete product.} \on{obscure}
 %Software can evolve from one state to the other as its utility is recognized by others, so these decisions may need to be revisited.
 
-There is literature on success in open source arguing that projects should start with a (nearly) working software application, not just ideas and plans~\cite{senyard2004have}. One possible solution here is to use infrastructure that can be easily opened, such as private repositories on github, but carefully choose when to flip that switch. That does not, however, change the need for practices such as governance.
+There is literature on success in open source arguing that projects should start with a (nearly) working software application, not just ideas and plans~\cite{senyard2004have}. One possible solution here is to use infrastructure that can be easily opened, such as private repositories on GitHub, but carefully choose when to flip that switch. That does not, however, change the need for practices such as governance.
 
 %There have been cases where researchers have released their code and have been publicly shamed by the software engineering community because it was of low quality.
 %\todo{(NEED CITATIONS- SOMETHING WAS ON SLASHDOT A COUPLE OF YEARS AGO)}
@@ -394,7 +394,7 @@ Establish a specific plan for releasing scientific source code from day one of d
 \end{itemize}
 
 Give regular talks, seminars and courses on releasing software to the public.
-Sit alongside individual researchers and take them through how to use github (say) to actually make their code public for the first time.
+Sit alongside individual researchers and take them through how to use GitHub (say) to actually make their code public for the first time.
 
 Whenever a paper is published within your institution that explicitly mentions the development of code, speak to the author about releasing the software behind it. Write and promote articles giving explicit examples of good practice.
 
@@ -510,7 +510,7 @@ Some starting points for further research follow:
 
 \begin{itemize}
 \item HCI/design research: Understand user intention to support discoverability, explore opportunities for machine learning application
-\item Instrumentation of existing infrastructure (\eg github), or use of annotation infrastructure such as hypothes.is, json-ld
+\item Instrumentation of existing infrastructure (\eg GitHub), or use of annotation infrastructure such as hypothes.is, json-ld
 \item What is the cost of code that is undiscoverable, unavailable, or unrunnable?
 \item How much does it cost to support / not support software that others use?
 \item Map out existing models to share the costs, to inform recommendations
@@ -586,7 +586,7 @@ In the Endnote world, Endnote and its proprietary style system makes some things
 
 We can define a set of example software citations and produce metadata records for them. We can then use a continuous integration tool to run each of those through each style in each bibliographic tool chain. We can then compare the outputs to the software citation principles and say whether the style file produces valid software citations. By automating that comparison we can define a test.
 
-In the CSL world style file distribution and editing is centralized; by changing the style files in the github repository they will eventually be distributed to users via their software client.
+In the CSL world style file distribution and editing is centralized; by changing the style files in the GitHub repository they will eventually be distributed to users via their software client.
 
 In the bibtex world, however, bst files are not centralized but distributed in a heterogenous manner (partly through latex distributions, partly through publisher websites). Often the closest thing to a canonical distribution point is the publishers' sites, so we would have to convince each publisher to take an edited bst file.  One approach to drive this change could be to regularly tweet the failing test to the publisher and provide a link to a file that does not fail the tests.
 
