Several fixes from Cédric Vonesch

--- a/dagstuhl-eas-manifesto.tex
+++ b/dagstuhl-eas-manifesto.tex
@@ -499,7 +499,7 @@ a given research problem. This challenge is further complicated by the \emph{div
 programmer skill, project scale, level of concern and scale of action. The new and ambitious
 \textit{Software Heritage}\footnote{\url{https://www.softwareheritage.org}} initiative could be used
 to make software available and discoverable, and provides a structured and rich repository of
-currently more than 3 billion programs.
+currently more than 3 billion source files.
 
 Understanding the metadata ecosystem is another major research focus, but what other approaches, aside from (or complementary to) standards can support scaling of discoverability? Other questions on this agenda are concerned with measuring the amount and cost of hidden software, but we already recognize it as a pain point that may be addressed with design, tooling, and workshops.
 
@@ -552,7 +552,8 @@ Many common tools that embody SE best practices are not written for researchers.
 Here are some possible starting points for further research:
 
 \begin{itemize}
-\item How can tool design bring what SE already knows (\eg about testing, debugging, reproducibility) to bear into the scientific context?
+% \item How can tool design bring what SE already knows (\eg about testing, debugging, reproducibility) to bear into the scientific context?
+\item How can tool design help to encourage SE best practices (\eg related testing, debugging, reproducibility) in the development of scientific software?
 \item How do different tools augment programmer cognition?
 \item Develop typologies of software and corresponding design requirements. For example:
     \begin{itemize}
@@ -612,8 +613,8 @@ Specific questions in the area of ecosystem analysis and metadata are:
 \item What kind of metadata is needed? What formats are appropriate?
 \item What motivates projects to generate and maintain metadata?
 \item How well can software be observed in the literature?
-\item What are the moments in which participants are well motivated (\eg people are motivated just after publishing a new paper to add it to their request for citation).
-\item Can we motivate software developers to improve metadata by pushing
+\item What are the moments in which participants are well motivated (\eg people are motivated just after publishing a new paper to add it to their request for citation)?
+\item How can we motivate software developers to improve metadata?
 \item How can we quantify and measure code meaningfully?
 \end{itemize}
 
@@ -656,7 +657,7 @@ Specific questions in the area of ecosystem analysis and metadata are:
 \section*{Acknowledgements}
 
 The participants wish to thank Schloss Dagstuhl for their strong support of this workshop. \\
-We thank Tobias Rawald (GFZ Potsdam) for his contributions to the phrasing of the pledges.
+We thank Tobias Rawald (GFZ Potsdam) for his contributions to the phrasing of the pledges, and C\'edric Vonesch for reviewing the final draft.
 
 
 % ==========================================================
