--- a/eas.bib
+++ b/eas.bib
@@ -372,3 +372,12 @@ note={[Last accessed: 2016-11-22]}
 	author = {Caroline Jay and Rawan Sanyour and Robert Haines},
   year = {In press}
 }
+
+@inproceedings{desouza_2014,
+  title={{Defining sustainability through developers’ eyes: Recommendations from an interview study}},
+  author={{M\'{a}rio Rosado de Souza and Robert Haines and Caroline Jay}},
+  year={2014},
+  booktitle={WSSSPE 2},
+  url={http://dx.doi.org/10.6084/m9.figshare.1111925},
+  doi={10.6084/m9.figshare.1111925}
+}
