Fix names in ref.

--- a/eas.bib
+++ b/eas.bib
@@ -375,7 +375,7 @@ note={[Last accessed: 2016-11-22]}
 
 @inproceedings{desouza_2014,
   title={{Defining sustainability through developers’ eyes: Recommendations from an interview study}},
-  author={{M\'{a}rio Rosado de Souza and Robert Haines and Caroline Jay}},
+  author={M\'{a}rio Rosado de Souza and Robert Haines and Caroline Jay},
   year={2014},
   booktitle={WSSSPE 2},
   url={http://dx.doi.org/10.6084/m9.figshare.1111925},
