--- a/eas.bib
+++ b/eas.bib
@@ -16,8 +16,7 @@
   pages={rvv014},
   year={2015},
   publisher={Oxford University Press},
-  doi = {10.1093/reseval/rvv014},
-  url = {http://herbsleb.org/web-pubs/pdfs/howison-understanding-2015.pdf}
+  doi = {10.1093/reseval/rvv014}
 }
 
 @article{howison2014collaboration,
@@ -302,13 +301,20 @@ Shared under CC-BY.},
 }
 
 @article{howison_software_2015,
-	title = {Software in the scientific literature: {Problems} with seeing, finding, and using software mentioned in the biology literature.},
+	title = {Software in the scientific literature: {Problems} with seeing, finding, and using software mentioned in the biology literature},
+	volume = {67},
+	issn = {2330-1643},
+	shorttitle = {Software in the scientific literature},
 	doi = {10.1002/asi.23538},
-	journal = {Journal of the Association for Information Science and Technology (JASIST)},
+	language = {en},
+	number = {9},
+	urldate = {2016-12-01},
+	journal = {Journal of the Association for Information Science and Technology},
 	author = {Howison, James and Bullard, Julia},
-	year = {2015},
-	pages = {Article first published online: 13 MAY 2015},
-	file = {HowisonBullard_SoftwareCitation_WorkingPaper.pdf:/Users/howison/Library/Application Support/Zotero/Profiles/u6jomw7h.default/zotero/storage/52Q7ZIME/HowisonBullard_SoftwareCitation_WorkingPaper.pdf:application/pdf;Howison_et_al-2015-Journal_of_the_Association_for_Information_Science_and_Technology(1).pdf:/Users/howison/Library/Application Support/Zotero/Profiles/u6jomw7h.default/zotero/storage/TG8R374Q/Howison_et_al-2015-Journal_of_the_Association_for_Information_Science_and_Technology(1).pdf:application/pdf}
+	month = sep,
+	year = {2016},
+	keywords = {bibliographic citations, biology, journals},
+	pages = {2137--2155},
 }
 
 @article{momcheva_software_2015,
