removing the non-existent "Anne Helper"

--- a/dagstuhl-eas-manifesto.tex
+++ b/dagstuhl-eas-manifesto.tex
@@ -73,7 +73,7 @@ Software sustainability.
 
 \seminarnumber{16252}
 \semdata{19.--24.~June, 2016 -- \href{http://www.dagstuhl.de/16252}{www.dagstuhl.de/16252}}
-\additionaleditors{Anne Helper}%optional
+%\additionaleditors{Anne Helper}%optional
 %Author macros: end%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %Dagstuhl editorial office macros: begin%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
