s/json-ld/JSON-LD/

--- a/dagstuhl-eas-manifesto.tex
+++ b/dagstuhl-eas-manifesto.tex
@@ -510,7 +510,7 @@ Some starting points for further research follow:
 
 \begin{itemize}
 \item HCI/design research: Understand user intention to support discoverability, explore opportunities for machine learning application
-\item Instrumentation of existing infrastructure (\eg GitHub), or use of annotation infrastructure such as hypothes.is, json-ld
+\item Instrumentation of existing infrastructure (\eg GitHub), or use of annotation infrastructure such as hypothes.is, JSON-LD
 \item What is the cost of code that is undiscoverable, unavailable, or unrunnable?
 \item How much does it cost to support / not support software that others use?
 \item Map out existing models to share the costs, to inform recommendations
